# ac-clip

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  config.py  docker-compose.yml  http_server.py  pyproject.toml
executors/: demo.py  transformers_torch.py
flows/: flow-demo.yml  flow-transformers.yml
helper/: __init__.py  transformers.py
image/: Dockerfile
log/: README.md
tmp/: README.md
